kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: arbetsprov-app
    app.kubernetes.io/instance: arbetsprov-app-test
    app.kubernetes.io/version: "0.0.1"
  name: arbetsprov-testapp-service
  namespace: arbetsprov-testapp
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app.kubernetes.io/name: arbetsprov-app
    app.kubernetes.io/instance: arbetsprov-app-test
