kustomize/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/name: arbetsprov-app
    app.kubernetes.io/instance: arbetsprov-app-test
    app.kubernetes.io/version: "0.0.1"
  name: arbetsprov-app-route
spec:
  host: arbetsprov-app.testapp.se
  to:
    kind: Service
    name: arbetsprov-testapp-service
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
